--- a/server/package.json
+++ b/server/package.json
@@ -8,19 +8,22 @@
     "build": "npm run clean && tsc",
     "start": "node src",
     "dev": "npx nodemon",
-    "local":"ts-node src",
-    "local:watch": "nodemon src -e ts,json --exec \"yarn run local\"",
+    "local": "ts-node src",
+    "local:watch": "nodemon src -e ts,json,yaml --exec \"yarn run local\"",
     "build:start": "npm run build && npm run start:prod"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "swagger-ui-express": "^5.0.0",
+    "yaml": "^2.3.4"
   }
 }
