--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.19",
     "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.0.3",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^8.1.3",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.3.4"
   }
