--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,14 @@
     "build": "npm run clean && tsc",
     "start": "node src",
     "dev": "npx nodemon",
-    "local": "ts-node src",
-    "local:watch": "nodemon src -e ts,json,yaml --exec \"yarn run local\"",
+    "local": "ts-node src/server.ts",
+    "local:watch": "nodemon src -e ts,json,yaml --exec \" yarn run local \" ",
     "build:start": "npm run build && npm run start:prod"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.19",
     "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.0.3",
@@ -23,8 +24,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
+    "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.3.4"
   }
