--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
