--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
@@ -31,5 +32,4 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
-
 }
