--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf ./dist",
-    "build": "npm run clean && tsc",
+    "build": "yarn run clean && tsc",
     "start": "node src",
     "dev": "npx nodemon",
     "local": "ts-node src/server.ts",
     "local:watch": "nodemon src -e ts,json,yaml --exec \" yarn run local \" ",
-    "build:start": "npm run build && npm run start:prod"
+    "build:start": "yarn run build && yarn run start:prod"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
