--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "yarn run clean && tsc",
-    "start": "node src",
+    "start": "node dist/server.js",
     "dev": "npx nodemon",
     "local": "ts-node src/server.ts",
     "local:watch": "nodemon src -e ts,json,yaml --exec \" yarn run local \" ",
-    "build:start": "yarn run build && yarn run start:prod"
+    "build:start": "yarn run build && yarn run start",
+    "prestart": "yarn run build"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
