fix: vercel config

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,6 +1,11 @@
 {
     "rewrites": [
-      { "source": "/[^.]*", "destination": "/index.html" }
+      
+        {
+          "source": "/feedback/((?!general).*)",
+          "destination": "/api/feedback/general"
+        }
+      
     ]
   }
   
