fix: 404 page not found

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,8 +2,7 @@
     "rewrites": [
       
         {
-          "source": "/feedback/((?!general).*)",
-          "destination": "/api/feedback/general"
+          "source": "/(.*)", "destination": "/"
         }
       
     ]
